[UPDATE] : Floating button + AlertDialog

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,8 +36,8 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.2.0'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'com.google.android.material:material:1.1.0'
+    //implementation 'androidx.appcompat:appcompat:1.1.0'
+    //implementation 'com.android.support:design'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
@@ -45,7 +45,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     // For UI stuff, layout files
-    implementation "com.google.android.material:material-rc01"
+    //implementation "com.google.android.material:material-rc01"
+    implementation 'com.google.android.material:material:1.1.0'
     implementation "com.android.support.constraint:constraint-layout:1.1.3"
     implementation "androidx.cardview:cardview:1.0.0"
     implementation "androidx.recyclerview:recyclerview:1.1.0"
